source/private-vault/installation/canvas-vault-hc/public-route-for-testing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canvas-vault-hc-ingress
  namespace: canvas-vault
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production  
  labels:
    app: canvas-vault-hc
spec:
  ingressClassName: nginx
  tls:
    - secretName: canvas-vault-ssl
      hosts:
      - canvas-vault.k8s.feri.ai          
  rules:
  - host: "canvas-vault.k8s.feri.ai"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: canvas-vault-hc
              port:
                number: 8200
